Fix overflow and social media horizontal

--- a/style/main.css
+++ b/style/main.css
@@ -114,7 +114,8 @@ html, body {
 	color: black;
 }*/
 #facebook, #twitter {
-	position: absolute;
+	position: static;
+	float: right;
 	right: 0;
 	height: 3em;
 	/*border: 1px solid black;*/
@@ -170,6 +171,13 @@ html, body {
 }
 .shadowed {
 	box-shadow: 0px 1px 20px 0px black;
+}
+#overflow-protector {
+	overflow: hidden;
+	height: 100%;
+	width: 100%;
+	margin: 0;
+	padding: 0;
 }
 @-webkit-keyframes loading_anim {
 	from {
